[package]

name = "bodyparser"
version = "0.0.5"
license = "MIT"
description = "Body parsing middleware for Iron."
repository = "https://github.com/iron/body-parser"
documentation = "http://ironframework.io/doc/bodyparser/index.html"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]

[dependencies]
rustc-serialize = "*"
plugin = "*"

[dependencies.iron]
git = "https://github.com/AerialX/iron.git"
branch = "feat/hyper-0.6"
default-features = false

[dependencies.persistent]
git = "https://github.com/AerialX/persistent.git"
default-features = false
